--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -12,5 +12,5 @@
   <%= f.label :password_confirmation, "Confirmation" %>
   <%= f.password_field :password_confirmation, class: 'form-control' %>
 
-  <%= f.submit "Create my account", class: "btn btn-primary" %>
+  <%= f.submit "Create my account", class: "btn btn-success" %>
 <% end %>
